# opencv_sample

./: .gitignore
cpp/: CMakeLists.txt  cloning_gui.cpp  dbt_face_detection.cpp  facedetect.cpp  peopledetect.cpp  smiledetect.cpp
cpp/tutorial_code/ImgProc/: BasicLinearTransforms.cpp  Morphology_2.cpp
cpp/tutorial_code/viz/: histo3D.cpp
cpp_sample/: CMakeLists.txt  bgfg_segm.cpp  fitellipse.cpp  gstreamer_pipeline.cpp  mask_tmpl.cpp  polar_transforms.cpp  train_HOG.cpp  videostab.cpp
cpp_tutorial/: CMakeLists.txt
cpp_tutorial/ImgProc/changing_contrast_brightness_image/: changing_contrast_brightness_image.cpp
